--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,17 +1,19 @@
 <% include ../partials/header %>
 
-<div class="container">
-    <h1 style="text-align:center;">Add a new Campground</h1>
-    <div style="width: 30%; margin: 25px auto;">
-        <form action="/campgrounds" method="POST">
-            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
-            <div class="form-group"><textarea name="description" class="form-control" cols="5" rows="5" placeholder="Description"></textarea></div>
-            <div class="form-group"><input class="form-control" type="text" name="image" placeholder="Image"></div>
-            <div class="form-group"><input class=" btn btn-primary btn-lg btn-block" type="submit" value="Create"></div>        
-        </form>
-        <a href="/campgrounds">Go Back</a>
-    </div>
+<h1 style="text-align:center;">Add a new Campground</h1>
+<div style="width: 30%; margin: 25px auto;">
+    <form action="/campgrounds" method="POST">
+        <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name"></div>
+        <div class="form-group"><textarea name="description" class="form-control" cols="5" rows="5" placeholder="Description"></textarea></div>
+        <div class="form-group"><input class="form-control" type="text" name="image" placeholder="Image"></div>
+        <div class="form-group">
+            <label for="location">Location</label>
+            <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+        </div>
+        <div class="form-group"><input class="form-control" type="number" name="price" placeholder="Price" min="0.01" step="0.01"></div>
+        <div class="form-group"><input class=" btn btn-primary btn-lg btn-block" type="submit" value="Create"></div>        
+    </form>
+    <a href="/campgrounds">Go Back</a>
 </div>
-
 
 <% include ../partials/footer %>
